[project]
name = "droidvm-tools"
version = "0.1.0"
description = "Tools and server for managing Android phone as a tiny home server via Termux"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "psutil>=6.1.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
]

[project.scripts]
droidvm-tools = "droidvm_tools.cli:app"
start-server = "droidvm_tools.server:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.hatchling.build.targets.wheel]
packages = ["src/droidvm_tools"]
