[project]
name = "droidvm-tools"
version = "0.1.0"
description = "Tools and server for managing Android phone as a tiny home server via Termux"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.109.2",
    "uvicorn[standard]==0.27.1",
    "psutil>=6.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "httpx>=0.26.0",
    "rich>=13.7.0",
]

[project.scripts]
droidvm-tools = "droidvm_tools.cli:app"
start-server = "droidvm_tools.server:start"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/droidvm_tools"]
